# tinkclaw-mcp

./: README.md  pyproject.toml
.github/workflows/: publish.yml
tinkclaw_mcp/: __init__.py  server.py
